# ComfyUI-audio-nodes

./: __init__.py  pyproject.toml  readme.md  requirements.txt
example_workflows/: Bark.json
lib/bark/: readme.md
lib/bark/hubert/: hubert_manager.py  pre_kmeans_hubert.py
lib/general/: model_downloader.py
nodes/: __init__.py  basenode.py
nodes/bark/: __init__.py  bark_generation.py  bark_loader.py
nodes/general/: __init__.py  encodec.py
util/: categories.py
